; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/extr_linux.c_wait_queue_create.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/extr_linux.c_wait_queue_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.__wait_queue = type { i32, i32, i8*, i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@WQ_FLAG_AUTO_REMOVAL = common dso_local global i32 0, align 4
@SynchronizationEvent = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.__wait_queue* @wait_queue_create() #0 {
  %1 = alloca %struct.__wait_queue*, align 8
  %2 = alloca %struct.__wait_queue*, align 8
  store %struct.__wait_queue* null, %struct.__wait_queue** %2, align 8
  %3 = load i32, i32* @GFP_KERNEL, align 4
  %4 = call %struct.__wait_queue* @kmalloc(i32 24, i32 %3)
  store %struct.__wait_queue* %4, %struct.__wait_queue** %2, align 8
  %5 = load %struct.__wait_queue*, %struct.__wait_queue** %2, align 8
  %6 = icmp ne %struct.__wait_queue* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %0
  store %struct.__wait_queue* null, %struct.__wait_queue** %1, align 8
  br label %27

8:                                                ; preds = %0
  %9 = load %struct.__wait_queue*, %struct.__wait_queue** %2, align 8
  %10 = call i32 @memset(%struct.__wait_queue* %9, i32 0, i32 24)
  %11 = load i32, i32* @WQ_FLAG_AUTO_REMOVAL, align 4
  %12 = load %struct.__wait_queue*, %struct.__wait_queue** %2, align 8
  %13 = getelementptr inbounds %struct.__wait_queue, %struct.__wait_queue* %12, i32 0, i32 3
  store i32 %11, i32* %13, align 8
  %14 = call i64 (...) @KeGetCurrentThread()
  %15 = inttoptr i64 %14 to i8*
  %16 = load %struct.__wait_queue*, %struct.__wait_queue** %2, align 8
  %17 = getelementptr inbounds %struct.__wait_queue, %struct.__wait_queue* %16, i32 0, i32 2
  store i8* %15, i8** %17, align 8
  %18 = load %struct.__wait_queue*, %struct.__wait_queue** %2, align 8
  %19 = getelementptr inbounds %struct.__wait_queue, %struct.__wait_queue* %18, i32 0, i32 1
  %20 = call i32 @INIT_LIST_HEAD(i32* %19)
  %21 = load %struct.__wait_queue*, %struct.__wait_queue** %2, align 8
  %22 = getelementptr inbounds %struct.__wait_queue, %struct.__wait_queue* %21, i32 0, i32 0
  %23 = load i32, i32* @SynchronizationEvent, align 4
  %24 = load i32, i32* @FALSE, align 4
  %25 = call i32 @KeInitializeEvent(i32* %22, i32 %23, i32 %24)
  %26 = load %struct.__wait_queue*, %struct.__wait_queue** %2, align 8
  store %struct.__wait_queue* %26, %struct.__wait_queue** %1, align 8
  br label %27

27:                                               ; preds = %8, %7
  %28 = load %struct.__wait_queue*, %struct.__wait_queue** %1, align 8
  ret %struct.__wait_queue* %28
}

declare dso_local %struct.__wait_queue* @kmalloc(i32, i32) #1

declare dso_local i32 @memset(%struct.__wait_queue*, i32, i32) #1

declare dso_local i64 @KeGetCurrentThread(...) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1

declare dso_local i32 @KeInitializeEvent(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
